--- a/content.tex
+++ b/content.tex
@@ -1,9 +1,11 @@
 \section{Introduction}
 
-In the SoOS project we inspect service-oriented aspects of operating
-systems. One part of the project requires to simulate the interactions
-between software components of an operating system (in the following:
-OS) and between OS and application software.
+
+In the SoOS project\footnote{See <<project url>> for details.} we
+inspect service-oriented aspects of operating systems. One part of the
+project requires to simulate the interactions between software
+components of an operating system (in the following: OS) and between
+OS and application software.
 
 The ability to simulate separate components of the OS and of the
 application was the main goal to develop the OS simulator \soosim. The
@@ -31,15 +33,36 @@ The contributions of this paper include
   useful in this project.
 \end{itemize}
 
-The remaining part of this paper is organised as follows. Section
-.... gives an overview of the SoOS project and of the role \soosim
-plays in the project. Section .... described the structure of the
-\soosim simulator from the user's perspective. Section .... gives an
-implementation overview of the domain specific language, used to
-implement \soosim. Section .... discusses Haskell features from which
-our implementation especially benefitted. Section .... covers related
-work. Section .... concludes and gives an outlook for the further
-research.
+The remaining part of this paper is organised as
+follows. Section~\ref{sec:soos-project} gives an overview of the SoOS
+project and of the role \soosim plays in the
+project. Section~\ref{sec:soosim-an-overview} described the structure
+of the \soosim simulator from the user's
+perspective. Section~\ref{sec:dsl} gives an implementation overview of
+the domain specific language, used to implement
+\soosim. Section~\ref{sec:impl-detail} discusses Haskell features from
+which our implementation especially
+benefitted. Section~\ref{sec:related-work} covers related
+work. Section~\ref{sec:concl-future-work} concludes and gives an
+outlook for the further research.
+
+\section{SoOS Project}
+\label{sec:soos-project}
+
+\section{\soosim: An Overview}
+\label{sec:soosim-an-overview}
+
+\section{A Domain-specific Language for \soosim}
+\label{sec:dsl}
+
+\section{Implementation Details}
+\label{sec:impl-detail}
+
+\section{Related Work}
+\label{sec:related-work}
+
+\section{Conclusions and Future Work}
+\label{sec:concl-future-work}
 
 % \appendix
 % \section{Appendix Title}
