--- a/jabref.bib
+++ b/jabref.bib
@@ -6292,9 +6292,9 @@ author = "S. Winograd"
  pages = {71--82},
  numpages = {12},
  DOUBLEurl = {http://doi.acm.org/10.1145/2034675.2034685},
- doi = {http://doi.acm.org/10.1145/2034675.2034685},
+ doi = {10.1145/2034675.2034685},
  acmid = {2034685},
- publisher = {ACM},
+ publisher = theacm,
  OPTaddress = {New York, NY, USA},
  keywords = {haskell, parallel},
 } 
@@ -7484,7 +7484,7 @@ OPTaddress = {Los Alamitos, CA, USA},
  articleno = {5},
  numpages = {10},
  DOUBLEurl = {http://doi.acm.org/10.1145/1941054.1941059},
- doi = {http://doi.acm.org/10.1145/1941054.1941059},
+ doi = {10.1145/1941054.1941059},
  acmid = {1941059},
  publisher = theacm,
  OPTaddress = {New York, NY, USA},
@@ -7519,7 +7519,8 @@ OPTaddress = {Los Alamitos, CA, USA},
 @article{Harris:2008:CMT:1378704.1378725,
  author = {Harris, Tim and Marlow, Simon and Jones, Simon Peyton~Jones and Herlihy, Maurice},
  title = {Composable memory transactions},
- journal = {Communications of the ACM},
+ longjournal = {Communications of the ACM},
+ journal = {Comm.\ ACM},
  issue_date = {August 2008},
  volume = {51},
  issue = {8},
@@ -7529,7 +7530,7 @@ OPTaddress = {Los Alamitos, CA, USA},
  pages = {91--100},
  numpages = {10},
  DOUBLEurl = {http://doi.acm.org/10.1145/1378704.1378725},
- doi = {http://doi.acm.org/10.1145/1378704.1378725},
+ doi = {10.1145/1378704.1378725},
  acmid = {1378725},
  publisher = theacm,
  OPTaddress = {New York, NY, USA},
@@ -7604,7 +7605,7 @@ OPTaddress = {Los Alamitos, CA, USA},
  pages = {71--72},
  numpages = {2},
  DOUBLEurl = {http://doi.acm.org/10.1145/1835698.1835714},
- doi = {http://doi.acm.org/10.1145/1835698.1835714},
+ doi = {10.1145/1835698.1835714},
  acmid = {1835714},
  publisher = theacm,
  OPTaddress = {New York, NY, USA},
