--- a/content.tex
+++ b/content.tex
@@ -170,7 +170,9 @@ some further handling in this case.
 \acks
 
 %Acknowledgments, if needed.
-This work was supported by EU FP7 SoOS project under grant ......
+This work was supported by the S(o)OS project, sponsored by the
+European Commission under FP7-ICT-2009.8.1, Grant Agreement
+No. 248465.
 
 %%% Local Variables: 
 %%% mode: latex
