--- a/soosim.tex
+++ b/soosim.tex
@@ -300,9 +300,9 @@ breaklines=true,basicstyle=\sffamily];#1;}
 \authorinfo{Oleg Lobachev}
            {Scuola Superiore Sant'Anna\\Pisa, Italy}
            {o.lobachev@sssup.it}
-\authorinfo{Christiaan Baaij\and J. Kuper}
+\authorinfo{Christiaan Baaij\and Jan Kuper}
            {University of Twente\\Twente, Netherlands}
-           {\{c.p.r.baaij,...\}@utwente.nl}
+           {\{c.p.r.baaij,j.kuper\}@utwente.nl}
 \authorinfo{Giuseppe Lipari}
            {Scuola Superiore Sant'Anna\\Pisa, Italy}
            {g.lipari@sssup.it}
