--- a/jabref.bib
+++ b/jabref.bib
@@ -8371,3 +8371,20 @@ year = {2000}
   year={2007},
   publisher={O'Reilly Media, Inc.}
 }
+@inproceedings{Hofer:2008:PED:1449913.1449935,
+ author = {Hofer, Christian and Ostermann, Klaus and Rendel, Tillmann and Moors, Adriaan},
+ title = {Polymorphic embedding of dsls},
+ booktitle = {Proceedings of the 7th international conference on Generative programming and component engineering},
+ series = {GPCE '08},
+ year = {2008},
+ isbn = {978-1-60558-267-2},
+ OPTlocation = {Nashville, TN, USA},
+ pages = {137--148},
+ numpages = {12},
+ DOUBLEurl = {http://doi.acm.org/10.1145/1449913.1449935},
+ doi = {10.1145/1449913.1449935},
+ acmid = {1449935},
+ publisher = theacm,
+ OPTaddress = {New York, NY, USA},
+ keywords = {algebraic semantics, compositionality, domain-specific languages, extensibility, pure embedding, scala},
+} 
