--- a/content.tex
+++ b/content.tex
@@ -137,8 +137,102 @@ these \emph{null} messages.  In that case the component will not be
 executed by the simulator during a \emph{tick}.
 
 
+\subsection{OS Component Descriptions}
 
-\olcomment{Explain all this \cd{createComponent}, \cd{invoke}, etc.}
+The OS components are also specified in Haskell, each component is
+modelled as a function. In case of \soosim, such a function is
+executed within the context of the simulator, this means: in a
+\emph{monad}.
+
+Because the function is executed within the monad, it can have
+\emph{side-effects} such as sending messages to other components, or
+reading the memory of a local memory.  In addition, the function can
+be temporarily suspended at (almost) any point in the code.  \soosim
+needs to be able to suspend the execution of a function so that it may
+emulate synchronous message passing between components, a subject we
+will further elaborate later on.
+
+We describe a component as a function that receives a user-defined
+internal state as its first argument and a value of type \hs{SimEvent}
+as its second argument.  The result of this function is the internal
+state.  A value of type \hs{SimEvent} is either message from another
+component, or a \emph{null} message.  We thus have the following type
+signature for a component: 
+%\numbersoff
+\begin{code}
+component :: State -> SimEvent -> SimM State
+\end{code}
+
+The simulator monad \hs{SimM} is described in Figure \olcomment{.....}
+The user-defined internal \hs{State} can be used to store any
+information that needs to perpetuate across simulator ticks.
+
+To include a component description in the simulator, the developer
+will have to create an instance of the \hs{ComponentIface} \emph{type-class}.
+% A \emph{type-class} in Haskell can be compared to an interface
+% definition as those known in object-oriented languages.  An
+% \emph{instance} of a \emph{type-class} is a concrete instantiation
+% of such an interface.
+%% haskell people know that!
+The \hs{ComponentIface} requires the instantiation of the following values to completely define a component:
+
+\begin{itemize}
+  \item The initial internal state of the component.
+  \item The unique name of the component.
+  \item The monadic function describing the behaviour of the component.
+\end{itemize}
+
+Note, we are aiming at a high level of abstraction for the behavioural
+descriptions of our OS modules, where the focus is mainly on the
+interaction with other OS modules and application threads.
+
+
+\subsection{Interaction with the simulator}
+
+Components have several functions at their disposal to interact with
+the simulator and consequently interact with other components.  The
+available functions are:
+
+\paragraph{\hs{createComponent}}
+Instantiate a new component on a specified node. 
+%; the component definition must be registered with the simulator.
+\paragraph{\hs{invoke}}
+Send a message to another component, and wait for the answer.  This
+means that whenever a component uses this function it will be
+(temporarily) suspended by the simulator.  Several simulator ticks
+might pass before the callee sends a response.  Once the response is
+put in the message queue of the caller, the simulator resumes the
+execution of the calling component.  Having this synchronization
+available obviates the need to specify the behaviour of a component as
+a finite state machine.
+\paragraph{\hs{invokeAsync}}
+Send a message to another component, and register a handler with the
+simulator to process the response.  Unlike \hs{invoke}, using this
+function will \emph{not} suspend the execution of the component.
+\paragraph{\hs{respond}}
+Send a message to another component as a response to an invocation.
+\paragraph{\hs{yield}}
+Inform the simulator that the component does not want to receive
+\emph{null} messages.
+\paragraph{\hs{readMem}}
+Read at a specified address of a node's local memory.
+\paragraph{\hs{writeMem}}
+Write a new value at a specified address of a node's local memory.
+\paragraph{\hs{componentLookup}}
+Lookup the unique identifier of a component on a specified node.
+Components have two unique identifiers, their global \emph{name} (as
+specified in the \hs{CompIface} instance), and a \hs{ComponentId} that
+is a unique number corresponding to a specific instance of a
+component.  When you want to \emph{invoke} a component, you need to
+know the unique \hs{ComponentId} of the specific instance.  To give a
+concrete example, using the system of Figure~\ref{img_system} as our
+context: \emph{Thread (\#6)} wants to invoke the instance of the
+\emph{Memory Manager} that is running on the same Node (\#2).  As
+\emph{Thread (\#6)} was not involved with the instantiation of that OS
+module, it has no idea what the specific \hs{ComponentId} of the
+memory manager on Node \#2 is.  It knows the unique global name of all
+memory managers, so it can use the \hs{componentLookup} function to
+find the \hs{Memory Manager} with ID \#5 that is running on Node \#2.
 
 \section{A Domain-specific Language for \soosim}
 \label{sec:dsl}
@@ -147,9 +241,9 @@ The DSL was embedded in Haskell \cite{haskell-report}.
 
 \subsection{Final Tagless}
 
-\olcomment{- Final tagless \cite{...}
+\olcomment{- Final tagless \cite{final_tagless_embedding}
 
-- Tillmann embedded DSL with type classes \cite{...} }
+- Tillmann embedded DSL with type classes \cite{Hofer:2008:PED:1449913.1449935} }
 
 \section{Implementation Details}
 \label{sec:impl-detail}
