--- a/content.tex
+++ b/content.tex
@@ -277,6 +277,8 @@ class Symantics repr where
 \section{Implementation Details}
 \label{sec:impl-detail}
 
+\olcomment{Rename to ``features we used''?}
+
 \subsection{Type classes}
 
 Type classes are naturally used for the eDSL encoding from the
@@ -337,6 +339,9 @@ makes use of the coroutines in the following way. \olcomment{explain it!}
 \label{sec:related-work}
 
 \olcomment{Related work from WATERS paper + more!}
+
+\cite{house}
+\cite{final_tagless_embedding,Hofer:2008:PED:1449913.1449935}
 
 \section{Conclusions and Future Work}
 \label{sec:concl-future-work}
