--- a/haskell2012.bib
+++ b/haskell2012.bib
@@ -85,7 +85,7 @@
  keywords = {computer systems, discrete simulation, hierarchical, integrated development environment, network simulation, performance analysis, simulation tools, telecommunications},
 }
 
-@inproceedings{house,
+@inproceedings{house-,
  author = {Hallgren, Thomas and Jones, Mark P. and Leslie, Rebekah and Tolmach, Andrew},
  title = {{A Principled Approach to Operating System Construction in Haskell}},
  booktitle = {Proceedings of ICFP '05},
@@ -100,6 +100,27 @@
  address = {New York, NY, USA},
  keywords = {Haskell, hardware interface, monads, operating systems, programming logic, verification},
 }
+
+@article{house,
+ author = {Hallgren, Thomas and Jones, Mark P. and Leslie, Rebekah and Tolmach, Andrew},
+ title = {A principled approach to operating system construction in Haskell},
+ journal = {SIGPLAN Notices},
+ issue_date = {September 2005},
+ volume = {40},
+ number = {9},
+ month = sep,
+ year = {2005},
+ issn = {0362-1340},
+ pages = {116--128},
+ numpages = {13},
+ DOUBLEurl = {http://doi.acm.org/10.1145/1090189.1086380},
+ doi = {10.1145/1090189.1086380},
+ acmid = {1086380},
+ publisher = {ACM},
+ OPTaddress = {New York, NY, USA},
+ keywords = {Haskell, hardware interface, monads, operating systems, programming logic, verification},
+} 
+
 
 @article{barrelfish,
  author = {Dagand, Pierre-Evariste and Baumann, Andrew and Roscoe, Timothy},
